--- a/configs/classification.yaml
+++ b/configs/classification.yaml
@@ -17,20 +17,26 @@ trainer:
   accelerator: gpu
   devices: 2
   max_epochs: 300
-  precision: 32
-  log_every_n_steps: 1000
+  precision: 16
+  log_every_n_steps: 100
   gradient_clip_val: 1.0
   benchmark: true
 
   callbacks:
     - class_path: lightning.pytorch.callbacks.ModelCheckpoint
       init_args:
+        dirpath: "checkpoints"
         monitor: val_acc
         mode: max
         save_top_k: 3
         save_last: true
         every_n_epochs: 10
         filename: senatra-{epoch:02d}-{val_acc:.4f}
+      
+    - class_path: src.senatra.utils.callbacks.AttnMapLogger
+      init_args:
+        log_every_n_batches: 50
+        max_imgs: 4
 
   logger:
     - class_path: lightning.pytorch.loggers.WandbLogger
@@ -40,4 +46,5 @@ trainer:
         entity: emin-sadikhov-technical-university-of-munich
         save_dir: wandb_logs/
         log_model: true
-        offline: false 
+        offline: false
+        resume: true
