--- a/configs/classification.yaml
+++ b/configs/classification.yaml
@@ -17,15 +17,16 @@ trainer:
   accelerator: gpu
   devices: 2
   max_epochs: 300
-  precision: 16
+  precision: "bf16-mixed"
   log_every_n_steps: 100
   gradient_clip_val: 1.0
   benchmark: true
+  check_val_every_n_epoch: 1
+
 
   callbacks:
     - class_path: lightning.pytorch.callbacks.ModelCheckpoint
       init_args:
-        dirpath: "checkpoints"
         monitor: val_acc
         mode: max
         save_top_k: 3
@@ -35,16 +36,16 @@ trainer:
       
     - class_path: src.senatra.utils.callbacks.AttnMapLogger
       init_args:
-        log_every_n_batches: 50
+        train_log_every_n_epochs: 1
+        val_log_every_n_epochs: 1
         max_imgs: 4
 
   logger:
     - class_path: lightning.pytorch.loggers.WandbLogger
       init_args:
-        name: senatra-classification
         project: senatra
         entity: emin-sadikhov-technical-university-of-munich
         save_dir: wandb_logs/
         log_model: true
         offline: false
-        resume: true
+        resume: allow
