--- a/configs/classification.yaml
+++ b/configs/classification.yaml
@@ -15,13 +15,13 @@ data:
 
 trainer:
   accelerator: gpu
-  devices: 2
+  devices: 4
   max_epochs: 300
   precision: "bf16-mixed"
   log_every_n_steps: 100
   gradient_clip_val: 1.0
   benchmark: true
-  check_val_every_n_epoch: 1
+  check_val_every_n_epoch: 5
 
 
   callbacks:
@@ -32,12 +32,12 @@ trainer:
         save_top_k: 3
         save_last: true
         every_n_epochs: 10
-        filename: senatra-{epoch:02d}-{val_acc:.4f}
+        filename: senatra-{epoch:02d}-{val_acc:.4f}``
       
     - class_path: src.senatra.utils.callbacks.AttnMapLogger
       init_args:
-        train_log_every_n_epochs: 1
-        val_log_every_n_epochs: 1
+        train_log_every_n_epochs: 2
+        val_log_every_n_epochs: 5
         max_imgs: 4
 
   logger:
